# jetpack.js

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  README_CN.md  js-syntax.rkt  lang-helper.rkt  syntax_def.rb  syntax_gen.rb
bundle-utils/: CMakeLists.txt
bundle-utils/src/: JetFlags.h  JetJSON.cpp  Path.h  Utils.cpp  Utils.h
bundle-utils/src/io/: FileIO.cpp  FileIO.h
bundle-utils/src/string/: CommonArrayOps.h  PrivateStringUtils.cpp  QArrayData.cpp  QArrayData.h  UChar.h  UString.cpp  UString.h  UStringData.cpp  UStringData.h  UStringDataPointer.cpp  UStringDataPointer.h  UStringView.cpp  UStringView.h
bundler/: CMakeLists.txt
bundler/src/: ExternalImportHandler.cpp  ExternalImportHandler.h  FileIO.cpp  FileIO.h  GlobalImportHandler.cpp  GlobalImportHandler.h  GlobalUnresolvedIdLogger.h  ModuleCompositor.h  ModuleConcatenation.cpp  ModuleFile.cpp  ModuleFile.h  ModuleProvider.cpp  ModuleProvider.h  ModuleResolver.cpp  ModuleResolver.h  ModulesTable.cpp  ModulesTable.h  OutputStream.cpp  OutputStream.h  ResolveResult.h  SourceMapGenerator.cpp  SourceMapGenerator.h  TreeShaking.cpp  TreeShaking.h  UniqueNameGenerator.cpp  UniqueNameGenerator.h  main.cpp
bundler/src/codegen/: CodeGen.cpp  CodeGen.h  NodeTraverser.h
bundler/src/sourcemap/: MappingCollector.cpp  MappingCollector.h  SourceMapGenerator.cpp  SourceMapGenerator.h
bundler/tests/: codegen.cpp  contant_folding.cpp  jsx.cpp  resolve.cpp  scope.cpp  sourcemap.cpp
esparser/: CMakeLists.txt  syntax_def.rb
jetpack/: CMakeLists.txt
jetpack-cli/: CMakeLists.txt  main.cpp
jetpack-wasm/: CMakeLists.txt  main.cpp
jetpack/src/: Benchmark.cpp  Benchmark.h  CodeGenFragment.cpp  CodeGenFragment.h  Error.h  GlobalImportHandler.cpp  GlobalImportHandler.h  JetpackFlags.h  ModuleCompositor.cpp  ModuleCompositor.h  ModuleFile.cpp  ModuleFile.h  ModuleProvider.cpp  ModuleProvider.h  ModuleResolver.cpp  ModuleResolver.h  ModulesTable.cpp  ModulesTable.h  ResolveResult.h  SimpleAPI.cpp  SimpleAPI.h  Slice.h  StringWithMapping.cpp  StringWithMapping.h  UniqueNameGenerator.cpp  UniqueNameGenerator.h  WorkerError.h
jetpack/src/codegen/: AutoNodeTraverser.cpp  AutoNodeTraverser.h  CodeGen.cpp  CodeGen.h  CodeGenConfig.h  NodeTraverser.cpp  NodeTraverser.h
jetpack/src/dumper/: AstToJson.h
jetpack/src/optimize/: ConstantFolding.cpp  ConstantFolding.h
jetpack/src/parser/: AstContext.cpp  AstContext.h  BaseNodes.h  Config.cpp  Config.h  ConstantFolding.cpp  JSXParser.cpp  JSXParser.h  NodesMaker.cpp  NodesMaker.h  ParseErrorHandler.cpp  ParseErrorHandler.h  Parser.cpp  Parser.hpp  ParserCommon.cpp  ParserCommon.h  ParserContext.cpp  ParserContext.h  SyntaxNodes.cpp  SyntaxNodes.h  TypescriptParser.cpp  TypescriptParser.h
jetpack/src/scope/: ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  Scope.cpp  Scope.h  Variable.h
jetpack/src/sourcemap/: MappingCollector.cpp  MappingCollector.h  SourceMapDecoder.cpp  SourceMapDecoder.h  SourceMapGenerator.cpp  SourceMapGenerator.h
jetpack/src/tokenizer/: Comment.h  Location.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h
jetpack/src/utils/: Alloc.cpp  Alloc.h  Common.h  Dir.cpp  Dir.h  JetFlags.h  JetJSON.cpp  JetJSON.h  JetNumeric.h  JetTime.h  MemoryViewOwner.h  WaitGroup.h
jetpack/src/utils/io/: FileIO.cpp  FileIO.h
jetpack/src/utils/string/: PrivateStringUtils.cpp  PrivateStringUtils.h  UChar.h  UString.cpp  UString.h
jetpack/tests/: codegen.cpp  common_js.cpp  constant_folding.cpp  jsx.cpp  memory.cpp  resolve.cpp  scope.cpp  simple_api.cpp  sourcemap.cpp  tokenizer.cpp
jetpack/tests/fixtures/cjs/: cjs.js  cjs2.js  esm.js  index.js
jetpack/tests/fixtures/sourcemap/: B.js  index.js  package.json
js-bundler/: CMakeLists.txt
js-bundler/src/: Error.cpp  Error.h  ModuleConcatenation.h  ModuleResolver.cpp  ModuleResolver.h  UniqueNameGenerator.cpp  UniqueNameGenerator.h  Utils.h  main.cpp
js-bundler/src/codegen/: CodeGen.cpp  CodeGen.h  NodeTraverser.h
js-bundler/tests/: codegen.cpp  resolve.cpp  scope.cpp
js-parser/: CMakeLists.txt
js-parser/src/: artery.cpp  artery.h  macros.h  utils.h
js-parser/src/codegen/: CodeGen.cpp  CodeGen.h  NodeTraverser.cpp  NodeTraverser.h
js-parser/src/dumper/: AstToJson.h
js-parser/src/parser/: BaseNodes.h  ConstantFolding.cpp  JSXParser.cpp  JSXParser.h  NodeTypes.cpp  NodeTypes.h  NodesSize.h  ParseErrorHandler.cpp  ParseErrorHandler.h  Parser.cpp  Parser.hpp  ParserCommon.cpp  ParserCommon.h  ParserContext.cpp  ParserContext.h  SyntaxNodes.cpp  SyntaxNodes.h  TypescriptParser.cpp  TypescriptParser.h
js-parser/src/scope/: ExportManager.cpp  ExportManager.h  ImportManager.cpp  ImportManager.h  Scope.cpp  Scope.h  Variable.cpp  Variable.h
js-parser/src/string/: UString.cpp  UString.h
js-parser/src/tokenizer/: Comment.h  Scanner.cpp  Scanner.h  Token.h
jsrt/: CMakeLists.txt  cutils.c  cutils.h  jsheap.c  jsheap.h  jsrt.c  jsrt.h  libregexp.c  libregexp.h  libunicode-table.h  libunicode.c  static-str.h
npm/: .gitignore  .npmignore  CMakeLists.txt  READEME.md  cli.js  index.d.ts  index.js  index.test.js  module.cc  node_helper.hpp  package.json
npm-wasm/: .gitignore  .npmignore  build.js  index.d.ts  index.js  package.json
npm/scripts/: download_lib.js
src/: artery.cpp  artery.h  gc.hpp  js_string.cpp  js_string.h  lazy_thread_pool.cpp  lazy_thread_pool.h  macros.h  main.cpp  parse_error_handler.cpp  parse_error_handler.h  utils.h
src/codegen/: CodeGen.cpp  NodeTraverser.cpp  codegen.cpp  codegen.h  node_traverser.cpp  node_traverser.h
src/dumper/: ast_to_json.cpp  ast_to_json.h
src/entry/: main.cpp
src/parser/: JSXParser.cpp  ParseErrorHandler.h  Parser.hpp  ParserContext.cpp  ParserContext.h  SyntaxNodes.cpp  ast.cpp  ast.h  ast.hpp  ast_to_json.cpp  ast_to_json.h  base_nodes.cpp  base_nodes.h  error_message.h  jsx_parser.cpp  jsx_parser.h  node_traverser.cpp  node_traverser.h  node_traverser_intf.h  node_types.cpp  node_types.h  nodes_size.h  parse_error_handler.cpp  parse_error_handler.h  parser.cpp  parser.hpp  (+9 more)
test/: chalk.js  test.js
(+39 files in other folders)
